--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HD-Company</title>
+    <title>HD Company</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/images/Logo.jpg">
@@ -59,37 +59,8 @@
     </div>
 </section>
 
-<!-- About Section -->
-<section id="about" class="py-5">
-    <div class="container custom-container text-black">
-        <h2 class="text-center">About Us</h2>
-        <div class="row align-items-center">
-            <div class="col-md-3">
-                <img src="assets/images/about-bg.jpg" class="img-fluid rounded-circle" alt="About Us Image">
-            </div>
-            <div class="col-md-9">
-                <p>We are a team of IT professionals committed to delivering cutting-edge solutions tailored to meet the unique needs of our clients. Our expertise spans across cloud services, cybersecurity, IT support, and more. We believe in fostering long-term relationships with our clients by providing exceptional service and innovative solutions that drive success.</p>
-                <div class="row">
-                    <div class="col-md-4">
-                        <h3><i class="fas fa-bullseye"></i> Our Mission</h3>
-                        <p>To empower businesses with reliable and innovative IT solutions that drive growth and efficiency.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h3><i class="fas fa-eye"></i> Our Vision</h3>
-                        <p>To be the leading IT solutions provider recognized for excellence and innovation in the industry.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h3><i class="fas fa-heart"></i> Our Values</h3>
-                        <p>Integrity, customer focus, innovation, and continuous improvement guide everything we do.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
 <!-- Services Section -->
-<section id="services" class="py-5 bg-dark">
+<section id="services" class="py-5">
     <div class="container">
         <h2 class="text-center">Our Services</h2>
         <div class="row">
@@ -117,6 +88,34 @@
                     <div class="card-body">
                         <h5 class="card-title">IT Support</h5>
                         <p class="card-text">Our IT support services ensure that your technology infrastructure is always up and running smoothly.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- About Section -->
+<section id="about" class="py-5">
+    <div class="container custom-container text-black">
+        <h2 class="text-center">About Us</h2>
+        <div class="row align-items-center">
+            <div class="col-md-3">
+                <img src="assets/images/about-bg.jpg" class="img-fluid rounded-circle" alt="About Us Image">
+            </div>
+            <div class="col-md-9">
+                <p>We are a team of IT professionals committed to delivering cutting-edge solutions tailored to meet the unique needs of our clients. Our expertise spans across cloud services, cybersecurity, IT support, and more. We believe in fostering long-term relationships with our clients by providing exceptional service and innovative solutions that drive success.</p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <h3><i class="fas fa-bullseye"></i> Our Mission</h3>
+                        <p>To empower businesses with reliable and innovative IT solutions that drive growth and efficiency.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h3><i class="fas fa-eye"></i> Our Vision</h3>
+                        <p>To be the leading IT solutions provider recognized for excellence and innovation in the industry.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h3><i class="fas fa-heart"></i> Our Values</h3>
+                        <p>Integrity, customer focus, innovation, and continuous improvement guide everything we do.</p>
                     </div>
                 </div>
             </div>
@@ -249,6 +248,7 @@
         <p>&copy; 2024 HD Company. All rights reserved.</p>
     </div>
 </footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/scripts.js"></script>
 </body>
